--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -170,7 +170,7 @@
             android:layout_width="80dp"
             android:layout_height="55dp"
             android:id="@+id/btnCollapse"
-            android:background="@drawable/arrow_down_01" />
+            android:background="@drawable/arrow_down" />
 
         <TextView
             android:layout_width="wrap_content"
