--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -79,7 +79,6 @@
                 android:layout_marginLeft="83dip"
                 android:layout_marginBottom="10dip"
                 android:layout_gravity="start|bottom" />
-
             <Button
                 android:layout_width="70dip"
                 android:layout_height="73dip"
@@ -87,7 +86,6 @@
                 android:id="@+id/btnMonitor"
                 android:layout_marginBottom="0dip"
                 android:layout_gravity="center_horizontal|bottom" />
-
             <Button
                 android:layout_width="62dip"
                 android:layout_height="62dip"
@@ -105,7 +103,6 @@
                 android:layout_marginBottom="9dip"
                 android:layout_marginRight="5dip"
                 android:layout_gravity="end|bottom" />
-
             <Button
                 android:layout_width="40sp"
                 android:layout_height="40sp"
@@ -120,7 +117,7 @@
                 android:layout_marginTop="15sp"
                 android:layout_marginRight="15sp"
                 android:background="@drawable/location"
-                android:id="@+id/button"
+                android:id="@+id/btnLocation"
                 android:layout_gravity="right|top" />
             <Button
                 android:layout_width="40sp"
@@ -136,7 +133,7 @@
                 android:background="@drawable/setting1"
                 android:layout_marginTop="54sp"
                 android:layout_marginRight="15sp"
-                android:id="@+id/button2"
+                android:id="@+id/btnSetting"
                 android:layout_gravity="right|top" />
             <Button
                 android:layout_width="40sp"
@@ -152,7 +149,7 @@
                 android:background="@drawable/question"
                 android:layout_marginTop="95sp"
                 android:layout_marginRight="17sp"
-                android:id="@+id/button3"
+                android:id="@+id/btnQuestion"
                 android:layout_gravity="right|top" />
 
         </FrameLayout>
@@ -164,10 +161,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#88f2f2f2"
         android:weightSum="1">
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="55dp"
             android:layout_height="55dp"
             android:id="@+id/btnCollapse"
             android:background="@drawable/arrow_down" />
@@ -175,7 +173,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="25sp"
             android:text="0 dBA"
             android:textColor="#000000"
             android:textSize="37sp"
@@ -185,7 +183,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-50sp"
+            android:layout_marginTop="-60sp"
             android:layout_marginLeft="10sp"
             android:layout_marginRight="10sp"
             android:textColor="#000000"
@@ -197,7 +195,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="50sp"
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="10sp"
             android:text="Start Monitor Mode"
             android:id="@+id/btnStartMonitor"/>
         <Button
@@ -214,8 +212,8 @@
             android:layout_height="100dip"
             android:layout_alignLeft="@+id/roundProgressBar1"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="-140sp"
-            roundbar:roundColor="#BFBFBF"
+            android:layout_marginTop="-118sp"
+            roundbar:roundColor="#00f2f2f2"
             roundbar:roundProgressColor="#454545"
             roundbar:textColor="#454545"
             roundbar:roundWidth="15dip"
