--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -18,36 +18,7 @@
         android:layout_height="match_parent"
         android:weightSum="1">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03">
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show Lden map"
-                android:id="@+id/checkLden"
-                android:checked="true"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show two-hour dBA map"
-                android:id="@+id/checkTwoHour"
-                android:checked="false"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show noise events"
-                android:id="@+id/checkEvent"
-                android:checked="true"/>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show permanent noise sources"
-                android:id="@+id/checkSource"
-                android:checked="true"/>
-        </LinearLayout>
+
 
         <!--<com.google.android.gms.maps.MapView-->
             <!--android:id="@+id/mapView"-->
@@ -69,88 +40,143 @@
                 android:layout_height="60dip"
                 android:background="@drawable/task"
                 android:id="@+id/btnTask"
-                android:layout_marginBottom="9dip"
+                android:layout_marginBottom="5dip"
+                android:layout_marginLeft="5dip"
                 android:layout_gravity="start|bottom" />
             <Button
-                android:layout_width="54dip"
-                android:layout_height="54dip"
-                android:background="@drawable/meter"
-                android:id="@+id/btnRecord"
-                android:layout_marginLeft="83dip"
-                android:layout_marginBottom="10dip"
-                android:layout_gravity="start|bottom" />
-            <Button
-                android:layout_width="70dip"
-                android:layout_height="73dip"
-                android:background="@drawable/hear"
+                android:layout_width="63dip"
+                android:layout_height="63dip"
+                android:background="@drawable/hearing1"
                 android:id="@+id/btnMonitor"
-                android:layout_marginBottom="0dip"
+                android:layout_marginLeft="89dip"
+                android:layout_marginBottom="4dip"
+                android:layout_gravity="start|bottom" />
+            <Button
+                android:layout_width="60dip"
+                android:layout_height="60dip"
+                android:background="@drawable/meter1"
+                android:id="@+id/btnRecord"
+                android:layout_marginBottom="5dip"
                 android:layout_gravity="center_horizontal|bottom" />
             <Button
-                android:layout_width="62dip"
-                android:layout_height="62dip"
-                android:background="@drawable/profile"
-                android:id="@+id/btnProfile"
-                android:layout_marginRight="83dip"
+                android:layout_width="60dip"
+                android:layout_height="60dip"
+                android:background="@drawable/doctor1"
+                android:id="@+id/btnDiagnosis"
+                android:layout_marginRight="89dip"
                 android:layout_marginBottom="5dip"
                 android:layout_gravity="end|bottom"/>
-
             <Button
-                android:layout_width="52dip"
-                android:layout_height="50dip"
-                android:background="@drawable/community"
-                android:id="@+id/btnFriends"
-                android:layout_marginBottom="9dip"
+                android:layout_width="60dip"
+                android:layout_height="60dip"
+                android:background="@drawable/unlock"
+                android:id="@+id/btnUnlock"
+                android:layout_marginBottom="5dip"
                 android:layout_marginRight="5dip"
                 android:layout_gravity="end|bottom" />
+
+
+
             <Button
-                android:layout_width="40sp"
-                android:layout_height="40sp"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
                 android:clickable="false"
-                android:layout_marginTop="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginLeft="10sp"
                 android:background="@drawable/shadow"
-                android:layout_gravity="right|top" />
+                android:layout_gravity="left|top" />
             <Button
                 android:layout_width="30sp"
                 android:layout_height="30sp"
-                android:layout_marginTop="15sp"
-                android:layout_marginRight="15sp"
-                android:background="@drawable/location"
-                android:id="@+id/btnLocation"
-                android:layout_gravity="right|top" />
+                android:background="@drawable/profile"
+                android:id="@+id/btnProfile"
+                android:layout_marginLeft="20sp"
+                android:layout_marginTop="30sp"
+                android:layout_gravity="left|top"/>
             <Button
-                android:layout_width="40sp"
-                android:layout_height="40sp"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
                 android:clickable="false"
-                android:layout_marginTop="49sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginTop="69sp"
+                android:layout_marginLeft="10sp"
                 android:background="@drawable/shadow"
-                android:layout_gravity="right|top" />
+                android:layout_gravity="left|top" />
             <Button
-                android:layout_width="30sp"
-                android:layout_height="30sp"
+                android:layout_width="30dip"
+                android:layout_height="28dip"
+                android:background="@drawable/community"
+                android:id="@+id/btnFriends"
+                android:layout_marginTop="80sp"
+                android:layout_marginLeft="20sp"
+                android:layout_gravity="left|top" />
+            <Button
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:clickable="false"
+                android:layout_marginTop="118sp"
+                android:layout_marginLeft="10sp"
+                android:background="@drawable/shadow"
+                android:layout_gravity="left|top" />
+            <Button
+                android:layout_width="32sp"
+                android:layout_height="32sp"
                 android:background="@drawable/setting1"
-                android:layout_marginTop="54sp"
-                android:layout_marginRight="15sp"
+                android:layout_marginTop="127sp"
+                android:layout_marginLeft="19sp"
                 android:id="@+id/btnSetting"
-                android:layout_gravity="right|top" />
+                android:layout_gravity="left|top" />
             <Button
-                android:layout_width="40sp"
-                android:layout_height="40sp"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
                 android:clickable="false"
-                android:layout_marginTop="88sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginTop="167sp"
+                android:layout_marginLeft="10sp"
                 android:background="@drawable/shadow"
-                android:layout_gravity="right|top" />
+                android:layout_gravity="left|top" />
             <Button
                 android:layout_width="26sp"
                 android:layout_height="26sp"
                 android:background="@drawable/question"
-                android:layout_marginTop="95sp"
-                android:layout_marginRight="17sp"
+                android:layout_marginTop="179sp"
+                android:layout_marginLeft="22sp"
                 android:id="@+id/btnQuestion"
+                android:layout_gravity="left|top" />
+
+
+            <Button
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:clickable="false"
+                android:layout_marginTop="20sp"
+                android:layout_marginRight="10sp"
+                android:background="@drawable/shadow"
                 android:layout_gravity="right|top" />
+            <Button
+                android:layout_width="28sp"
+                android:layout_height="28sp"
+                android:layout_marginTop="31sp"
+                android:layout_marginRight="21sp"
+                android:background="@drawable/location"
+                android:id="@+id/btnLocation"
+                android:layout_gravity="right|top" />
+            <Button
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:clickable="false"
+                android:layout_marginTop="69sp"
+                android:layout_marginRight="10sp"
+                android:background="@drawable/shadow"
+                android:layout_gravity="right|top" />
+            <Button
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:background="@drawable/layers"
+                android:layout_marginTop="79sp"
+                android:layout_marginRight="20sp"
+                android:id="@+id/btnLayer"
+                android:layout_gravity="right|top" />
+
+
 
         </FrameLayout>
 
@@ -165,10 +191,10 @@
         android:weightSum="1">
 
         <Button
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="60dp"
+            android:layout_height="45dp"
             android:id="@+id/btnCollapse"
-            android:background="@drawable/arrow_down" />
+            android:background="@drawable/arrow_down_2" />
 
         <TextView
             android:layout_width="wrap_content"
