--- a/app/src/main/res/menu/menu_sound_map.xml
+++ b/app/src/main/res/menu/menu_sound_map.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="com.example.yuan.activities.SoundMap">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="edu.njit.map4noise.activities.SoundMap">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
